////////////////////////////////////////
// CHANGELOG 2.2.5-2.2.6 ///////////////
////////////////////////////////////////

****************************************
* Neue Funktionen / Änderungen *********
****************************************
PDF-Ansicht
- Block-Elemente (DIV, TABLE, TR, TH, TD) können mittels CSS-Eigenschaft 'display:none' ausgeblendet werden.

Modul: Inseratemarkt
- Administratoren können alle Inserate im Frontend verwalten.

****************************************
* Behobene Fehler **********************
****************************************
Aliasverwaltung
- Es können nun Aliase für Inhaltsseiten mit dem Schlüsselwort "require" definiert werden.

Modul: Shop
- Die Versandart wird im Frontend korrekt gesetzt, wenn nur eine definiert ist.

Dateiupload
- Jede Statusmeldung wird pro Datei nur einmal ausgegeben.

News Manager
- Die Ausgabe des Teaser Texts einer News Meldung erfolgt korrekt. Erfasste Zeilenumbrüche, wie auch hinterlegter HTML-Code wird entsprechend ausgegeben.

Kontakte Manager
- Die Benachrichtigung wird nun korrekt an die Empfängeradressen der Auswahlliste versendet.

Modul: Medienverzeichnis
- Der Dateiupload funktioniert nun auch im Frontend.
- Tritt ein Fehler während der Aktualisierung eines Eintrages auf, gehen die Daten nicht verloren.
- Anführungszeichen werden bei der Eingabe als Fliesstext korrekt behandelt.

Modul: Kalender
- Der Eintrag wird nun auch gespeichert, wenn die Option "Benachrichtigung aktivieren" nicht gewählt ist.

Media Manager
- Optimierter Dateiupload im Media Manager.